test/files/neg/t6952.scala
trait A
trait B extends Dynamic
trait C extends A with Dynamic
trait D extends B
